--- a/package.json
+++ b/package.json
@@ -4,18 +4,19 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node /src/app.js",
+    "start": "node ./src/app.js",
     "dev": "nodemon ./src/app.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@faker-js/faker": "^8.4.1",
     "bcrypt": "^5.1.1",
     "connect-mongo": "^5.1.0",
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.4.5",
-    "express": "^4.19.2",
+    "express": "^5.0.0-alpha.8",
     "express-handlebars": "^7.1.2",
     "express-session": "^1.18.0",
     "mongoose": "^8.3.5",
