--- a/package.json
+++ b/package.json
@@ -26,6 +26,11 @@
     "passport-github2": "^0.1.12",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1",
     "winston": "^3.13.0"
+  },
+  "nodemonConfig": {
+    "ext": "*"
   }
 }
