--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "connect-mongo": "^5.1.0",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "joi": "^17.13.3",
     "mongoose": "^8.4.4",
     "mongoose-paginate-v2": "^1.8.2",
     "passport": "^0.7.0",
